--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -414,12 +414,12 @@ A Order é uma representação de um pedido para a venda de um ou mais produtos 
 
 | Campo  |  Tipo | Descrição  | Obrigatório  |
 |--------|-------|------------|--------------|
-| id  |  Texto |  UUID que identifica unicamente o pedido. | Sim  |
+| id  |  Texto |  UUID que identifica unicamente o pedido. | criado pela API |
 | number  | Texto  | Número do pedido. Geralmente, esse número representa o identificador do pedido em um sistema externo através da integração com parceiros.  | Não  |
 |  reference |  Texto | Referência do pedido. Utilizada para facilitar o acesso ou a localização do mesmo.  |  Não |
 | status  | Texto  | Status do pedido (ENTERED, RE-ENTERED, PAID, CANCELED e CLOSED).  |  Sim |
-| created_at  | Texto  | Data de criação do pedido. A data deve estar no formato: YYYY-MM-DDThh:mm:ssZ (Exemplo: 20151020T13:13:29.000Z).  | Sim  |
-| updated_at  |  Texto | Data da última atualização do pedido. A data deve estar no formato: YYYY-MM-DDThh:mm:ssZ (Exemplo: 20151020T13:13:29.000Z).  | Sim  |
+| created_at  | Texto  | Data de criação do pedido. A data deve estar no formato: YYYY-MM-DDThh:mm:ssZ (Exemplo: 20151020T13:13:29.000Z).  | criado pela API  |
+| updated_at  |  Texto | Data da última atualização do pedido. A data deve estar no formato: YYYY-MM-DDThh:mm:ssZ (Exemplo: 20151020T13:13:29.000Z).  | criado pela API  |
 | items  |Lista (Order Item)   | Lista de itens contidos no pedido.  |  Sim |
 |  notes | Texto  | Campo disponível para uso do Merchant para comunicação.  | Não  |
 | transactions  | Lista (Transaction)|  Lista de transações de pagamento (ou outros tipos) efetuadas no pedido. | Sim  |
@@ -1214,33 +1214,6 @@ Nesse modelo de integração, toda a gestão do estabelecimento comercial e da a
 
 As seções abaixo possuem todas as informações necessárias para realizar a integração de forma rápida e segura.
 
----
-
-## Vídeo Demo
-
-No vídeo abaixo, é possível ver um exemplo de aplicativo integrado com o Cielo LIO Order Manager SDK, utilizando a função de pagamento de valores do SDK.
-
-[![Vídeo Demo](https://img.youtube.com/vi/d7y-x6p36YU/0.jpg)](https://www.youtube.com/watch?v=d7y-x6p36YU)
-
-Clique na imagem acima, para acessar o vídeo
-
-## Code Sample
-
-O código do exemplo do aplicativo integrado com o Cielo LIO Order Manager SDK encontra-se disponível no GitHub.
-
-Fluxo para Integração
-
-![fluxo para integração](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/fluxogram-local-new.png)
-
-1. Leia toda a documentação sobre a Integração Local.
-2. Crie sua conta no Portal de Desenvolvedores da Cielo para obter todas as funcionalidades que o portal pode oferecer para você, desenvolvedor. É obrigatório possuir uma conta para gerar um Client-Id.
-3. Realizando o cadastro de Client ID, o desenvolvedor recebe os tokens
-4. (Client ID e Access-Token) e consegue utilizar o Cielo LIO Order Manager SDK. Realize os testes no Emulador Cielo Lio Confira o link: [Download do Emulador](https://s3-sa-east-1.amazonaws.com/cielo-lio-store/apps/lio-emulator/1.0.0/lio-emulator.apk)
-5. Acesse a [Cielo Store](https://www.cieloliostore.com.br/login) e faça o upload do APK da sua aplicação. Ao término do upload, submeta seu aplicativo para certificação e preencha todas as informações necessárias.
-6. Ao término do upload submeta seu aplicativo, no próprio ambiente da Cielo Store, para certificação e preencha todas as informações necessárias.
-7. Assim que a certificação for concluída, o desenvolvedor receberá um e-mail e deverá acessar novamente a Cielo Store para promover o aplicativo para produção.
-8. Agora seu aplicativo já está disponível para download na Cielo Store. Sucesso!! Aproveite ao máximo tudo que a Integração Local Cielo LIO pode oferecer para você!!
-
 ## Cielo Lio Order Manager SDK
 
 ### Sobre
@@ -1261,9 +1234,9 @@ Para mais informações e detalhes sobre o desenvolvimento de um aplicativo para
 
 ### Ambiente Sandbox - Emulador
 
-A Cielo disponibiliza um aplicativo que simula o ambiente da Cielo LIO em qualquer dispositivo Android, permitindo que o desenvolvedor realize os testes nos métodos do SDK e faça o debug da sua aplicação durante o desenvolvimento e a integração com o Cielo LIO Order Manager SDK, sem a necessidade de possuir um hardware da Cielo LIO.
+Este aplicativo funciona como um proxy de todas as chamadas que o SDK enviaria para a LIO. Ele simplesmente trata essas chamadas e simula os tipos possíveis de retorno para a aplicação cliente, permitindo que o desenvolvedor realize os testes nos métodos do SDK e faça o debug da sua aplicação durante o desenvolvimento e a integração com o Cielo LIO Order Manager SDK, sem a necessidade de possuir um hardware da Cielo LIO.
 
-Faça o download do emulador no link abaixo:
+Faça o download do .apk do emu no link abaixo:
 
 [Download do Emulador](https://s3-sa-east-1.amazonaws.com/cielo-lio-store/apps/lio-emulator/1.0.0/lio-emulator.apk)
 
@@ -1279,41 +1252,26 @@ Após configurar um novo projeto no Android Studio, é necessário incluir a dep
 
 Para a versão release, adicione o módulo do Cielo LIO Order Manager SDK nas dependências do Gradle:
 
-> compile 'com.cielo.lio:order-manager:0.15.0'
+> compile 'com.cielo.lio:order-manager:0.17.7-beta
+
+> A partir da versão 1.17.7-beta do SDK se tornou necessária a permissão de INTERNET na aplicação cliente.
+Adicione ao `AndroidManifest.xml` da sua aplicação:
+
+```<uses-permission android:name="android.permission.INTERNET" />```
 
 ### Credenciais
 
 Para utilizar o Cielo LIO Order Manager SDK, é necessário inserir as seguintes credenciais na inicialização do OrderManager:
 
-```json
-    // Criação das credenciais. Não se esquecer de substituir
-    // Client-Id e Access-Token por suas credenciais. 
-    
-    Credentials credentials = new Credentials("Client-Id", "Access-Token"); 
-    
-    orderManager = new OrderManager(credentials, context);
+```java
+    Credentials credentials = new Credentials(<<Seu client id aqui>>", "<<Seu accessToken aqui>>"); 
 ```
 
 * Client-Id
 Identificação de acesso. Sua geração ocorre no momento da criação pelo painel do desenvolvedor. Seu valor pode ser visualizado na coluna Client ID, dentro do menu 'Desenvolvedor' -> 'Client ID Cadastrados'.
+
 * Access-Token
 Identificação do token de acesso, que armazena as regras de acesso permitidas ao Client ID. Sua geração ocorre no momento da criação do Client ID pelo painel do desenvolvedor. Seu valor pode ser visualizado clicando em 'detalhes' na coluna 'Access Tokens', dentro do menu 'Desenvolvedor' -> 'Client ID Cadastrados'.
-
-### Release Notes
-
-Na tabela abaixo, é possível verificar as funcionalidades do SDK disponíveis por versão da Cielo LIO e Cielo Mobile.
-
-| Funcionalidade                                                                                                                                                                                                           | Versão Cielo LIO | Versão Cielo Mobile |
-|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------|---------------------|
-| createDraftOrder(String reference)placeOrder(Order order)updateOrder(Order order)checkoutOrder(String orderId, PaymentListener paymentListener)checkoutOrder(String orderId,long value, PaymentListener paymentListener) | 1.10.2           | 1.9.1               |
-| retrievePaymentType()checkoutOrder(String orderId,long value, String primaryCode, String secondaryCode, PaymentListener,paymentListener)                                                                                 | 1.12.0           | 1.10.3              |
-| retrieveOrders(int pageSize, int page)                                                                                                                                                                                   | 1.13.0           | 1.10.5              |
-| checkoutOrder (String orderId,long value, String primaryCode, String secondaryCode, Long installments, PaymentListener paymentListener)                                                                                  | 1.14.0           | 1.12.1              |
-| cancelOrder (Context context, String orderId, Payment payment, CancellationListener paymentListener)cancelOrder (Context context, String orderId, Payment payment, Long amount, CancellationListener paymentListener)    | 1.16.7           | 1.12.10             |
-
->**Atenção:** Se for utilizada uma funcionalidade que não esteja disponível, será lançada uma exceção – UnsupportedOperationExcepetion –, que deve ser tratada pelo aplicativo.
-
-Para descobrir a versão do aplicativo Cielo LIO (versão do Launcher) e Cielo Mobile, bem como utilizar todas as funcionalidades do Cielo LIO Order Manager SDK, acesse “Sobre a Cielo LIO” (Ajuda -> Sobre a Cielo LIO) para obter as informações sobre os aplicativos instalados na Cielo LIO.
 
 ## Utilização Cielo LIO Order Manager SDK
 
@@ -1329,8 +1287,8 @@ Este método permite iniciar o OrderManager, que é responsável pelas principai
 
 Tudo começa com a criação do OrderManager!
 
-```json
-orderManager = new OrderManager(credentials, context);
+```java
+    OrderManager orderManager = new OrderManager(credentials, context);
 ```
 
 O construtor do OrderManager recebe 2 parâmetros:
@@ -1346,20 +1304,30 @@ O construtor do OrderManager recebe 2 parâmetros:
 
 Com este método – Bind –, é possível vincular o contexto da aplicação ao SDK. Este serviço é responsável por gerenciar as funções relacionadas com as ordens da LIO
 
-```json
+```java
     ServiceBindListener serviceBindListener = new ServiceBindListener() {
+    
+        @Override public void onServiceBoundError(Throwable throwable) {
+            //Ocorreu um erro ao tentar se conectar com o serviço OrderManager
+        }
+        
         @Override
         public void onServiceBound() {
-                // O serviço está vinculado 
+            //Você deve garantir que sua aplicação se conectou com a LIO a partir desse listener
+            //A partir desse momento você pode utilizar as funções do OrderManager, caso contrário uma exceção será lançada.
         } 
     
         @Override
         public void onServiceUnbound() {
-                // O serviço foi desvinculado
+            // O serviço foi desvinculado
         }
     }; 
+    
     orderManager.bind(contextActivity, serviceBindListener);
 ```
+
+>**Atenção:** Você deve garantir que o listener `onServiceBound()` foi chamado antes de utilizar as funções do OrderManager, caso contrário uma exceção será lançada e causará um crash na sua aplicação.
+
 
 O método Bind recebe dois parâmetros:
 
@@ -1375,8 +1343,8 @@ A Cielo LIO trabalha com o conceito de Order (pedido). É necessário possuir um
 
 Este método permite criar uma Order (classe Order). Para realizar essa criação, utilize o método createDraftOrder, que disponibilizará uma Order com status DRAFT:
 
-```json
-Order order = orderManager.createDraftOrder("REFERÊNCIA_DO_PEDIDO");
+```java
+    Order order = orderManager.createDraftOrder("REFERÊNCIA_DO_PEDIDO");
 ```
 
 ### Adicionar itens em um pedido
@@ -1417,30 +1385,26 @@ Este método permite iniciar o processo de pagamento na Cielo LIO.
 
 ```java
     PaymentListener paymentListener = new PaymentListener() {
-                @Override
-                public void onStart() {
-                Log.d("MinhaApp", "O pagamento começou.");
-                }
+        @Override
+        public void onStart() {
+            Log.d("MinhaApp", "O pagamento começou.");
+        }
+        
+        @Override
+        public void onPayment(@NotNull Order order) {
+            Log.d("MinhaApp", "Um pagamento foi realizado.");
+        } 
                 
-                @Override
-                public void onPayment(@NotNull Order order) {
-                Log.d("MinhaApp", "Um pagamento foi realizado.");
-                } 
+        @Override public void onCancel() {
+            Log.d("MinhaApp", "A operação foi cancelada.");
+        } 
                 
-                @Override public void onCancel() {
-                Log.d("MinhaApp", "A operação foi cancelada.");
-                } 
-                
-                @Override public void onError(@NotNull PaymentError paymentError) {
-                Log.d("MinhaApp", "Houve um erro no pagamento.");
-                }
+        @Override public void onError(@NotNull PaymentError paymentError) {
+            Log.d("MinhaApp", "Houve um erro no pagamento.");
+        }     
     }; 
     
-    String orderId = order.getId();
-    
-    long value = order.getPrice();
-    
-    orderManager.checkoutOrder(orderId, value, paymentListener);
+    orderManager.checkoutOrder(order.getId(), order.getPrice(), paymentListener);
 ```
 
 ## Processo de Pagamento
@@ -1465,6 +1429,48 @@ Nessa forma de pagamento, é necessário apenas fazer a chamada do método envia
 Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parcial:
 
 ![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcial.jpg)
+
+### Release Notes
+
+Na tabela abaixo, é possível verificar as funcionalidades do SDK disponíveis por versão da Cielo LIO e Cielo Mobile.
+
+| Funcionalidade                                                                                                                                                                                                           | Versão Cielo LIO | Versão Cielo Mobile |
+|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------|---------------------|
+| createDraftOrder(String reference); placeOrder(Order order); updateOrder(Order order); checkoutOrder(String orderId, PaymentListener paymentListener); checkoutOrder(String orderId,long value, PaymentListener paymentListener); | 1.10.2           | 1.9.1               |
+| retrievePaymentType(); checkoutOrder(String orderId,long value, String primaryCode, String secondaryCode, PaymentListener,paymentListener);                                                                                 | 1.12.0           | 1.10.3              |
+| retrieveOrders(int pageSize, int page);                                                                                                                                                                                   | 1.13.0           | 1.10.5              |
+| checkoutOrder (String orderId,long value, String primaryCode, String secondaryCode, Long installments, PaymentListener paymentListener);                                                                                  | 1.14.0           | 1.12.1              |
+| cancelOrder (Context context, String orderId, Payment payment, CancellationListener paymentListener); cancelOrder(Context context, String orderId, Payment payment, Long amount, CancellationListener paymentListener);   | 1.16.7           | 1.12.10             |
+
+>**Atenção:** Se for utilizada uma funcionalidade que não esteja disponível, será lançada uma exceção – UnsupportedOperationExcepetion –, que deve ser tratada pelo aplicativo.
+
+Para descobrir a versão do aplicativo Cielo LIO (versão do Launcher) e Cielo Mobile, bem como utilizar todas as funcionalidades do Cielo LIO Order Manager SDK, acesse “Sobre a Cielo LIO” (Ajuda -> Sobre a Cielo LIO) para obter as informações sobre os aplicativos instalados na Cielo LIO.
+---
+
+## Code Sample
+
+O código do exemplo do aplicativo integrado com o Cielo LIO Order Manager SDK encontra-se disponível no GitHub.
+
+Fluxo para Integração
+
+![fluxo para integração](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/fluxogram-local-new.png)
+
+1. Leia toda a documentação sobre a Integração Local.
+2. Crie sua conta no Portal de Desenvolvedores da Cielo para obter todas as funcionalidades que o portal pode oferecer para você, desenvolvedor. É obrigatório possuir uma conta para gerar um Client-Id.
+3. Realizando o cadastro de Client ID, o desenvolvedor recebe os tokens
+4. (Client ID e Access-Token) e consegue utilizar o Cielo LIO Order Manager SDK. Realize os testes no Emulador Cielo Lio Confira o link: [Download do Emulador](https://s3-sa-east-1.amazonaws.com/cielo-lio-store/apps/lio-emulator/1.0.0/lio-emulator.apk)
+5. Acesse a [Cielo Store](https://www.cieloliostore.com.br/login) e faça o upload do APK da sua aplicação. Ao término do upload, submeta seu aplicativo para certificação e preencha todas as informações necessárias.
+6. Ao término do upload submeta seu aplicativo, no próprio ambiente da Cielo Store, para certificação e preencha todas as informações necessárias.
+7. Assim que a certificação for concluída, o desenvolvedor receberá um e-mail e deverá acessar novamente a Cielo Store para promover o aplicativo para produção.
+8. Agora seu aplicativo já está disponível para download na Cielo Store. Sucesso!! Aproveite ao máximo tudo que a Integração Local Cielo LIO pode oferecer para você!!
+
+## Vídeo Demo
+
+No vídeo abaixo, é possível ver um exemplo de aplicativo integrado com o Cielo LIO Order Manager SDK, utilizando a função de pagamento de valores do SDK.
+
+[![Vídeo Demo](https://img.youtube.com/vi/d7y-x6p36YU/0.jpg)](https://www.youtube.com/watch?v=d7y-x6p36YU)
+
+Clique na imagem acima, para acessar o vídeo
 
 # Cielo Store
 
