Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -60,12 +60,12 @@ Acesse Documentação da Integração Local
 #### Integração Remota | Cielo LIO Order Manager
 
 Conjunto de APIs que permitem que o cliente continue utilizando sua solução de PDV / Automação Comercial com todas as funcionalidades. No momento de realizar o pagamento, ocorre a integração com o gerenciador de pedidos (Order Manager) da Cielo LIO, de forma rápida, simples e segura.
- [Saiba mais](https://developercielo.github.io/manual/cielo-lio#integração-remota)
+ [Ir para integração remota](https://developercielo.github.io/manual/cielo-lio#integração-remota)
 
 #### Integração Local | Cielo LIO Order Manager SDK
 
 A Cielo disponibiliza um SDK com base na Cielo LIO Order Manager API que permite ao desenvolvedor e parceiro Cielo LIO integrar em sua aplicação as funcionalidades da Cielo LIO.
- [Saiba mais](https://developercielo.github.io/manual/cielo-lio#integração-local)
+ [Ir para integração local](https://developercielo.github.io/manual/cielo-lio#integração-local)
 
 ### Serviços periféricos
 
@@ -138,7 +138,7 @@ A Cielo envia o SIM Card da melhor operadora de acordo com o endereço de cadast
 
 Esse SIM Card permite a conexão com a tecnologia 3G da Cielo LIO e possui um pacote de dados ilimitado.
 
-# Guia para desenvolvedores
+# Dicas para desenvolvedores
 
 O guia abaixo fornece as informações necessárias para ajudar os desenvolvedores a integrar ou desenvolver seus aplicativos na plataforma Cielo LIO da melhor maneira possível, de modo a oferecer uma experiência excelente para os estabelecimentos comerciais.
 
@@ -166,7 +166,7 @@ Seu aplicativo deve estar em conformidade com as práticas de programação Java
 
 * Princípios de Design Orientado a Objetos (S.O.L.I.D.).
 * Diretrizes de estilo Java.
-* Entenda a diferença entre compileSdkVersion, targetSdkVersion, e minSdkVersion.
+* Entenda a diferença entre `compileSdkVersion`, `targetSdkVersion`, e `minSdkVersion`.
 * Aproveite os botões nativos do Android, como os botões “Voltar” e “Início”.
 * Otimize as operações visando o baixo consumo da bateria
 * O aplicativo deve atender às necessidades dos estabelecimentos comerciais (lojistas) da Cielo.
@@ -224,7 +224,6 @@ Caso queira consultar quais APIs estão disponíveis, acesse https://developer.a
 ## Versão target da aplicação
 
 Recomenda-se que o desenvolvedor utilize como versão target da aplicação o Android 5.1.1 (Lollipop).
-
 Dessa forma, garante-se o funcionamento da aplicação no hardware da LIO V1 como também no hardware da LIO V2.
 
 ## Recursos Indisponíveis
@@ -239,35 +238,7 @@ Seguem abaixo os recursos removidos da Cielo LIO:
 
 > **Atenção**: A Cielo não permite que o aplicativo do cliente/parceiro seja desenvolvido utilizando o recurso WebView. Esse recurso visual deixa a plataforma da Cielo LIO vulnerável. Caso a aplicação esteja utilizando o WebView, esta não atenderá aos parâmetros de certificação e não será disponibilizada na Cielo Store.
 
-## APKs Removidas do Cielo OS
-
-Abaixo, segue uma tabela com todas as APKs que foram removidas do Cielo OS e que, consequentemente, não estão disponíveis para a Cielo LIO:
-
-||||
-|------------------|----------------------|-------------------------|
-| BasicSmsReceiver | FileManager          | PhaseBeam               |
-| Browser          | Galaxy4              | QuickSearchBox          |
-| Calculator       | Gallery              | SoundRecorder           |
-| Calendar         | HoloSpiralWallpaper  | SpeechRecorder          |
-| CalendarProvider | LiveWallpapers       | Todos                   |
-| CBMessageWidget  | LiveWallpaperPicker  | Videos                  |
-| Contacts         | MagicSmokeWallpapers | VisualizationWallpapers |
-| ContactsCommon   | MtkWeatherProvider   | VoiceCommand            |
-| DataTransfer     | Mms                  | VoiceDialer             |
-| Dialer           | Music                | VoiceExtension          |
-| Email            | MusicFX              | VoiceUnlock             |
-| Exchange2        | NlpService           | WallpaperCropper        |
-| FMRadio          | NoiseField           |                         |
-
-## Frameworks de Desenvolvimento
-
-Atualmente Cielo LIO ainda não dá suporte a aplicativos desenvolvidos em plataformas híbridas, como, por exemplo, Ionic, Titanium, Xamarin, CronApp e PhoneGap.
-
-## Recursos e métodos úteis Cielo LIO
-
-A Cielo removeu alguns recursos da Plataforma Cielo LIO visando garantir a segurança e integridade da mesma para desenvolvedores e lojistas.
-
-Portanto, abaixo disponibilizamos algumas alternativas que podem a vir substituir a ausência desses recursos.
+## Seguestões de substitutos
 
 ### Push-Notifications
 
@@ -301,9 +272,31 @@ Recurso exclusivo do Google Services, portanto não está presente na Cielo LIO.
 
 Referência: [Clique aqui](https://www.mapbox.com)
 
-Agora que você já tem as informações necessárias para desenvolver um aplicativo para, acesse a documentação da Integração Local para saber como se integrar com o SDK da Cielo LIO.
+## APKs Removidas do Cielo OS
 
-[Clique aqui](https://developercielo.github.io/manual/cielo-lio#integração-local)
+Abaixo, segue uma tabela com todas as APKs que foram removidas do Cielo OS e que, consequentemente, não estão disponíveis para a Cielo LIO:
+
+||||
+|------------------|----------------------|-------------------------|
+| BasicSmsReceiver | FileManager          | PhaseBeam               |
+| Browser          | Galaxy4              | QuickSearchBox          |
+| Calculator       | Gallery              | SoundRecorder           |
+| Calendar         | HoloSpiralWallpaper  | SpeechRecorder          |
+| CalendarProvider | LiveWallpapers       | Todos                   |
+| CBMessageWidget  | LiveWallpaperPicker  | Videos                  |
+| Contacts         | MagicSmokeWallpapers | VisualizationWallpapers |
+| ContactsCommon   | MtkWeatherProvider   | VoiceCommand            |
+| DataTransfer     | Mms                  | VoiceDialer             |
+| Dialer           | Music                | VoiceExtension          |
+| Email            | MusicFX              | VoiceUnlock             |
+| Exchange2        | NlpService           | WallpaperCropper        |
+| FMRadio          | NoiseField           |                         |
+
+## Frameworks de Desenvolvimento
+
+Atualmente Cielo LIO ainda não dá suporte a aplicativos desenvolvidos em plataformas híbridas, como, por exemplo, Ionic, Titanium, Xamarin, CronApp e PhoneGap.
+
+--- 
 
 # Integração Remota
 
@@ -1236,7 +1229,7 @@ Para mais informações e detalhes sobre o desenvolvimento de um aplicativo para
 
 Este aplicativo funciona como um proxy de todas as chamadas que o SDK enviaria para a LIO. Ele simplesmente trata essas chamadas e simula os tipos possíveis de retorno para a aplicação cliente, permitindo que o desenvolvedor realize os testes nos métodos do SDK e faça o debug da sua aplicação durante o desenvolvimento e a integração com o Cielo LIO Order Manager SDK, sem a necessidade de possuir um hardware da Cielo LIO.
 
-Faça o download do .apk do emu no link abaixo:
+Faça o download do .apk do emulador no link abaixo:
 
 [Download do Emulador](https://s3-sa-east-1.amazonaws.com/cielo-lio-store/apps/lio-emulator/1.0.0/lio-emulator.apk)
 
@@ -1252,7 +1245,7 @@ Após configurar um novo projeto no Android Studio, é necessário incluir a dep
 
 Para a versão release, adicione o módulo do Cielo LIO Order Manager SDK nas dependências do Gradle:
 
-> compile 'com.cielo.lio:order-manager:0.17.7-beta
+```compile 'com.cielo.lio:order-manager:0.17.7-beta```
 
 > A partir da versão 1.17.7-beta do SDK se tornou necessária a permissão de INTERNET na aplicação cliente.
 Adicione ao `AndroidManifest.xml` da sua aplicação:
@@ -1447,11 +1440,11 @@ Na tabela abaixo, é possível verificar as funcionalidades do SDK disponíveis 
 Para descobrir a versão do aplicativo Cielo LIO (versão do Launcher) e Cielo Mobile, bem como utilizar todas as funcionalidades do Cielo LIO Order Manager SDK, acesse “Sobre a Cielo LIO” (Ajuda -> Sobre a Cielo LIO) para obter as informações sobre os aplicativos instalados na Cielo LIO.
 ---
 
-## Code Sample
+### Code Sample
 
 O código do exemplo do aplicativo integrado com o Cielo LIO Order Manager SDK encontra-se disponível no GitHub.
 
-Fluxo para Integração
+## Fluxo para Integração
 
 ![fluxo para integração](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/fluxogram-local-new.png)
 
