Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1250,7 +1250,9 @@ Para a versão release, adicione o módulo do Cielo LIO Order Manager SDK nas de
 > A partir da versão 1.17.7-beta do SDK se tornou necessária a permissão de INTERNET na aplicação cliente.
 Adicione ao `AndroidManifest.xml` da sua aplicação:
 
-```<uses-permission android:name="android.permission.INTERNET" />```
+```json
+<uses-permission android:name="android.permission.INTERNET" />
+```
 
 ### Credenciais
 
@@ -1307,7 +1309,8 @@ Com este método – Bind –, é possível vincular o contexto da aplicação a
         @Override
         public void onServiceBound() {
             //Você deve garantir que sua aplicação se conectou com a LIO a partir desse listener
-            //A partir desse momento você pode utilizar as funções do OrderManager, caso contrário uma exceção será lançada.
+            //A partir desse momento você pode utilizar as funções do OrderManager, 
+            //caso contrário uma exceção será lançada.
         } 
     
         @Override
