Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1250,19 +1250,13 @@ Para a versão release, adicione o módulo do Cielo LIO Order Manager SDK nas de
 > A partir da versão 1.17.7-beta do SDK se tornou necessária a permissão de INTERNET na aplicação cliente.
 Adicione ao `AndroidManifest.xml` da sua aplicação:
 
-```json
-
-    <uses-permission android:name="android.permission.INTERNET" />
-```
+``` <uses-permission android:name="android.permission.INTERNET" /> ```
 
 ### Credenciais
 
 Para utilizar o Cielo LIO Order Manager SDK, é necessário inserir as seguintes credenciais na inicialização do OrderManager:
 
-```json
-
-    Credentials credentials = new Credentials(<<Seu client id aqui>>", "<<Seu accessToken aqui>>"); 
-```
+``` Credentials credentials = new Credentials(<<Seu client id aqui>>", "<<Seu accessToken aqui>>"); ```
 
 * Client-Id
 Identificação de acesso. Sua geração ocorre no momento da criação pelo painel do desenvolvedor. Seu valor pode ser visualizado na coluna Client ID, dentro do menu 'Desenvolvedor' -> 'Client ID Cadastrados'.
