Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1196,8 +1196,6 @@ O objetivo da Integração Local da Cielo LIO é permitir que o aplicativo desen
 
 Nesse modelo de integração, toda a gestão do estabelecimento comercial e da arquitetura da solução fica sob responsabilidade do aplicativo que irá utilizar o SDK nas operações de pagamento.
 
-![modelo de integração](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/diagrama-apresentacao-images.png)
-
 * O aplicativo do parceiro rodando na Cielo envia informações para o Cielo LIO Order Manager SDK.
 * O Cielo LIO Order Manager SDK executa os fluxos para pagamento.
 * O aplicativo do parceiro recebe as informações do pagamento e continua sua execução.
@@ -1259,7 +1257,7 @@ Identificação de acesso. Sua geração ocorre no momento da criação pelo pai
 * Access-Token
 Identificação do token de acesso, que armazena as regras de acesso permitidas ao Client ID. Sua geração ocorre no momento da criação do Client ID pelo painel do desenvolvedor. Seu valor pode ser visualizado clicando em 'detalhes' na coluna 'Access Tokens', dentro do menu 'Desenvolvedor' -> 'Client ID Cadastrados'.
 
-## Utilização Cielo LIO Order Manager SDK
+### Utilização
 
 O fluxo básico para utilização do SDK pode ser dividido em 7 etapas, conforme o diagrama abaixo:
 
@@ -1267,7 +1265,7 @@ O fluxo básico para utilização do SDK pode ser dividido em 7 etapas, conforme
 
 Abaixo, iremos mostrar como realizar cada uma dessas etapas.
 
-### Criar OrderManager
+#### Criar OrderManager
 
 Este método permite iniciar o OrderManager, que é responsável pelas principais operações do Cielo LIO Order Manager SDK. O OrderManager representa a interface com a API REST do Order Manager.
 
@@ -1286,7 +1284,7 @@ O construtor do OrderManager recebe 2 parâmetros:
 
 >**Atenção:** Recomendamos criar/inicializar o OrderManager no aplicativo do parceiro no momento em que for utilizar as funcionalidades, visando otimizar o desempenho do aplicativo
 
-### Vincular o contexto da aplicação ao SDK
+#### Vincular o contexto da aplicação ao SDK
 
 Com este método – Bind –, é possível vincular o contexto da aplicação ao SDK. Este serviço é responsável por gerenciar as funções relacionadas com as ordens da LIO
 
@@ -1323,7 +1321,7 @@ O método Bind recebe dois parâmetros:
 
 Com o OrderManager inicializado e após a execução do método onServiceBound, se torna possível ir para a próxima etapa e criar um pedido (classe Order).
 
-### Criar um pedido
+#### Criar um pedido
 
 A Cielo LIO trabalha com o conceito de Order (pedido). É necessário possuir um pedido para então realizar o(s) pagamento(s).
 
@@ -1333,7 +1331,7 @@ Este método permite criar uma Order (classe Order). Para realizar essa criaçã
     Order order = orderManager.createDraftOrder("REFERÊNCIA_DO_PEDIDO");
 ```
 
-### Adicionar itens em um pedido
+#### Adicionar itens em um pedido
 
 Este método permite que sejam adicionados itens em um pedido.
 
@@ -1354,7 +1352,7 @@ Este método permite que sejam adicionados itens em um pedido.
     order.addItem(sku, name, unitPrice, quantity, unityOfMeasure);
 ```
 
-### Liberar pedido para pagamento
+#### Liberar pedido para pagamento
 
 Este método permite atualizar o status de um pedido e liberá-lo para pagamento. O objetivo é utilizar este método depois de adicionar todos os itens no pedido.
 
