Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1284,9 +1284,7 @@ Este método permite iniciar o OrderManager, que é responsável pelas principai
 
 Tudo começa com a criação do OrderManager!
 
-```
-    OrderManager orderManager = new OrderManager(credentials, context);
-```
+```OrderManager orderManager = new OrderManager(credentials, context);```
 
 O construtor do OrderManager recebe 2 parâmetros:
 
@@ -1340,9 +1338,7 @@ A Cielo LIO trabalha com o conceito de Order (pedido). É necessário possuir um
 
 Este método permite criar uma Order (classe Order). Para realizar essa criação, utilize o método createDraftOrder, que disponibilizará uma Order com status DRAFT:
 
-```
-    Order order = orderManager.createDraftOrder("REFERÊNCIA_DO_PEDIDO");
-```
+```Order order = orderManager.createDraftOrder("REFERÊNCIA_DO_PEDIDO");```
 
 #### Adicionar itens em um pedido
 
