Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1347,7 +1347,7 @@ Este método permite que sejam adicionados itens em um pedido.
 > **Atenção:** É necessário adicionar no mínimo um item a um pedido para que seja possível dar continuidade ao pagamento.
 
 ```
-    // Identificação do produto (Stock Keeping Unit)
+// Identificação do produto (Stock Keeping Unit)
     String sku = "2891820317391823";
     String name = "Coca-cola lata";
     
@@ -1365,9 +1365,7 @@ Este método permite que sejam adicionados itens em um pedido.
 
 Este método permite atualizar o status de um pedido e liberá-lo para pagamento. O objetivo é utilizar este método depois de adicionar todos os itens no pedido.
 
-```
-    orderManager.placeOrder(order);
-```
+``` orderManager.placeOrder(order); ```
 
 Após a execução desse método, o status da Order irá trocar de DRAFT para ENTERED, permitindo que a mesma seja paga.
 
