Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1254,9 +1254,7 @@ Para a versão release, adicione o módulo do Cielo LIO Order Manager SDK nas de
 ```compile 'com.cielo.lio:order-manager:0.17.7-beta```
 
 > A partir da versão 1.17.7-beta do SDK se tornou necessária a permissão de INTERNET na aplicação cliente.
-Adicione ao `AndroidManifest.xml` da sua aplicação:
-
-```<uses-permission android:name="android.permission.INTERNET" />```
+Adicione ao `AndroidManifest.xml` da sua aplicação: `<uses-permission android:name="android.permission.INTERNET" />`
 
 ### Credenciais
 
