--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1202,19 +1202,6 @@ Nesse modelo de integração, toda a gestão do estabelecimento comercial e da a
 
 As seções abaixo possuem todas as informações necessárias para realizar a integração de forma rápida e segura.
 
-## Fluxo para Integração
-
-![fluxo para integração](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/fluxogram-local-new.png)
-
-1. Leia toda a documentação sobre a Integração Local.
-2. Crie sua conta no Portal de Desenvolvedores da Cielo para obter todas as funcionalidades que o portal pode oferecer para você, desenvolvedor. É obrigatório possuir uma conta para gerar um Client-Id.
-3. Realizando o cadastro de Client ID, o desenvolvedor recebe os tokens
-4. (Client ID e Access-Token) e consegue utilizar o Cielo LIO Order Manager SDK. Realize os testes no Emulador Cielo Lio Confira o link: [Download do Emulador](https://s3-sa-east-1.amazonaws.com/cielo-lio-store/apps/lio-emulator/1.0.0/lio-emulator.apk)
-5. Acesse a [Cielo Store](https://www.cieloliostore.com.br/login) e faça o upload do APK da sua aplicação. Ao término do upload, submeta seu aplicativo para certificação e preencha todas as informações necessárias.
-6. Ao término do upload submeta seu aplicativo, no próprio ambiente da Cielo Store, para certificação e preencha todas as informações necessárias.
-7. Assim que a certificação for concluída, o desenvolvedor receberá um e-mail e deverá acessar novamente a Cielo Store para promover o aplicativo para produção.
-8. Agora seu aplicativo já está disponível para download na Cielo Store. Sucesso!! Aproveite ao máximo tudo que a Integração Local Cielo LIO pode oferecer para você!!
-
 ## Cielo Lio Order Manager SDK
 
 ### Sobre
@@ -1254,7 +1241,7 @@ Para a versão release, adicione o módulo do Cielo LIO Order Manager SDK nas de
 ```compile 'com.cielo.lio:order-manager:0.17.7-beta```
 
 > A partir da versão 1.17.7-beta do SDK se tornou necessária a permissão de INTERNET na aplicação cliente.
-Adicione ao `AndroidManifest.xml` da sua aplicação: <uses-permission android:name="android.permission.INTERNET" />
+Adicione ao `AndroidManifest.xml` da sua aplicação: ` <uses-permission android:name="android.permission.INTERNET"/> `
 
 ### Credenciais
 
@@ -1403,6 +1390,21 @@ Nessa forma de pagamento, é necessário apenas fazer a chamada do método envia
 Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parcial:
 
 ![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcial.jpg)
+
+---
+
+## Fluxo para Integração
+
+![fluxo para integração](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/fluxogram-local-new.png)
+
+1. Leia toda a documentação sobre a Integração Local.
+2. Crie sua conta no Portal de Desenvolvedores da Cielo para obter todas as funcionalidades que o portal pode oferecer para você, desenvolvedor. É obrigatório possuir uma conta para gerar um Client-Id.
+3. Realizando o cadastro de Client ID, o desenvolvedor recebe os tokens
+4. (Client ID e Access-Token) e consegue utilizar o Cielo LIO Order Manager SDK. Realize os testes no Emulador Cielo Lio Confira o link: [Download do Emulador](https://s3-sa-east-1.amazonaws.com/cielo-lio-store/apps/lio-emulator/1.0.0/lio-emulator.apk)
+5. Acesse a [Cielo Store](https://www.cieloliostore.com.br/login) e faça o upload do APK da sua aplicação. Ao término do upload, submeta seu aplicativo para certificação e preencha todas as informações necessárias.
+6. Ao término do upload submeta seu aplicativo, no próprio ambiente da Cielo Store, para certificação e preencha todas as informações necessárias.
+7. Assim que a certificação for concluída, o desenvolvedor receberá um e-mail e deverá acessar novamente a Cielo Store para promover o aplicativo para produção.
+8. Agora seu aplicativo já está disponível para download na Cielo Store. Sucesso!! Aproveite ao máximo tudo que a Integração Local Cielo LIO pode oferecer para você!!
 
 ## Release Notes
 
